--- a/theme/templates/includes/profile-link.html
+++ b/theme/templates/includes/profile-link.html
@@ -1,5 +1,5 @@
-<a class="profile-preview" data-toggle="modal"
-   data-target="#profile-preview-modal" href="#"
+<a class="profile-preview" data-toggle="dropdown"
+   href="#"
    data-name="{% if user.first_name or user.last_name %}
     {{ user.first_name }} {% if user.middle_name %}
     {{ user.middle_name }}{% endif %} {{ user.last_name }}
