Profile card styling

--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -2,7 +2,7 @@
     <li>
         <div class="flex">
             <div>
-                <div class="profile-pic round-image user-icon"></div>
+                <div class="dropdown-profile-pic-thumbnail round-image dropdown-user-icon"></div>
 
                 <hr>
 
