Content blocks spacing

--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -16,7 +16,7 @@
                     <div data-joined>Nov 24, 2016</div>
                 </div>
             </div>
-            <div>
+            <div style="flex-grow: 1;">
                 <h3 style="margin-top: 0;"><a href="#" title="View Profile" data-name>Maurier Ramirez</a></h3>
 
                 <table style="margin-left: -14px;">
@@ -76,6 +76,5 @@
                 </div>
             </div>
         </div>
-
     </li>
 </ul>
