--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -91,7 +91,7 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 }
 
 .profile-card .flex > div {
-    padding: 10px;
+    padding: 15px;
 }
 
 .profile-card .flex > div:first-child {
@@ -1130,6 +1130,11 @@ pre.readme {
     height: 155px
 }
 
+span.abstract p {
+    line-height: 1.5;
+    max-width: 960px;
+}
+
 span.remove {
     position: absolute;
     right: 1px;
@@ -1608,7 +1613,7 @@ body > .main-container {
     width: 100%
 }
 
-.content-block h3, #comments h3 {
+.content-block > h3, #comments > h3 {
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
     margin-top: 40px
