--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -1,118 +1,112 @@
 {% if not metadata_form %}
     <div class="col-xs-12 content-block">
+        <h3>Resource Level Coverage</h3>
         <div class="row">
-            <div class="col-xs-12">
-                <h3>Resource Level Coverage</h3>
-            </div>
-            <div class="col-xs-12 content-block">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-4">
-                        {% if spatial_coverage %}
-                            <h4>Spatial:</h4>
-                            {% if spatial_coverage.projection %}
-                                <div>
-                                    <i class="fa fa-globe" aria-hidden="true"></i>
-                                    <small>&nbsp;Coordinate System/Geographic Projection:&nbsp;</small>
-                                </div>
-                                <div>{{ spatial_coverage.projection }}</div>
-                                <br>
-                            {% endif %}
-                            {% if spatial_coverage.units %}
-                                <div>
-                                    <i class="fa fa-tachometer" aria-hidden="true"></i>
-                                    <small>&nbsp;Coordinate Units:&nbsp;</small>
-                                </div>
-                                <div>{{ spatial_coverage.units }}</div>
-                                <br>
-                            {% endif %}
+            <div class="col-xs-12 col-sm-4">
+                {% if spatial_coverage %}
+                    <h4>Spatial:</h4>
+                    {% if spatial_coverage.projection %}
+                        <div>
+                            <i class="fa fa-globe" aria-hidden="true"></i>
+                            <small>&nbsp;Coordinate System/Geographic Projection:&nbsp;</small>
+                        </div>
+                        <div>{{ spatial_coverage.projection }}</div>
+                        <br>
+                    {% endif %}
+                    {% if spatial_coverage.units %}
+                        <div>
+                            <i class="fa fa-tachometer" aria-hidden="true"></i>
+                            <small>&nbsp;Coordinate Units:&nbsp;</small>
+                        </div>
+                        <div>{{ spatial_coverage.units }}</div>
+                        <br>
+                    {% endif %}
+                    <div>
+                        {% if spatial_coverage.name %}
                             <div>
-                                {% if spatial_coverage.name %}
-                                    <div>
-                                        <small>Place/Area Name: </small>
-                                        <span>{{ spatial_coverage.name }}</span>
-                                    </div>
-                                    <br>
-                                {% endif %}
+                                <small>Place/Area Name: </small>
+                                <span>{{ spatial_coverage.name }}</span>
                             </div>
-
-                            {% if spatial_coverage.north or spatial_coverage.northlimit %}
-                                <div class="row coordinates-list-container">
-                                    {% if spatial_coverage.type == 'point' %}
-                                        {% if spatial_coverage.east %}
-                                            <div class="col-xs-12 col-sm-6"><small>Longitude</small>
-                                                <div id="cov_east">{{ spatial_coverage.east|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                        {% if spatial_coverage.north %}
-                                            <div class="col-xs-12 col-sm-6"><small>Latitude</small>
-                                                <div id="cov_north">{{ spatial_coverage.north|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                    {% else %}
-                                        {% if spatial_coverage.northlimit %}
-                                            <div class="col-xs-12 col-sm-6 "><small>North Latitude</small>
-                                                <div id="cov_northlimit">{{ spatial_coverage.northlimit|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                        {% if spatial_coverage.eastlimit %}
-                                            <div class="col-xs-12 col-sm-6"><small>East Longitude</small>
-                                                <div id="cov_eastlimit">{{ spatial_coverage.eastlimit|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                        {% if spatial_coverage.southlimit %}
-                                            <div class="col-xs-12 col-sm-6"><small>South Latitude</small>
-                                                <div id="cov_southlimit">{{ spatial_coverage.southlimit|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                        {% if spatial_coverage.westlimit %}
-                                            <div class="col-xs-12 col-sm-6"><small>West Longitude</small>
-                                                <div id="cov_westlimit">{{ spatial_coverage.westlimit|floatformat:"4" }}°</div>
-                                            </div>
-                                        {% endif %}
-                                    {% endif %}
-                                </div>
-                            {% endif %}
-                        {% endif %}
-                        {% if temporal_coverage %}
                             <br>
-                            <h4>Temporal: </h4>
-                            <table class="info-table">
-                                <tbody>
-                                <tr>
-                                    <td><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<strong>Start Date:</strong></td>
-                                    <td><span class="format-date"
-                                                data-date="{{ temporal_coverage.start_date }}"></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<strong>End Date:</strong></td>
-                                    <td><span class="format-date"
-                                                data-date="{{ temporal_coverage.end_date }}"></span></td>
-                                </tr>
-                                </tbody>
-                            </table>
                         {% endif %}
                     </div>
 
-                    {% if spatial_coverage %}
-                        <div class="col-xs-12 col-sm-8">
-                            <div id="coverageMap" data-mode="view" data-shape-type="{{ spatial_coverage.type }}"></div>
+                    {% if spatial_coverage.north or spatial_coverage.northlimit %}
+                        <div class="row coordinates-list-container">
+                            {% if spatial_coverage.type == 'point' %}
+                                {% if spatial_coverage.east %}
+                                    <div class="col-xs-12 col-sm-6"><small>Longitude</small>
+                                        <div id="cov_east">{{ spatial_coverage.east|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                                {% if spatial_coverage.north %}
+                                    <div class="col-xs-12 col-sm-6"><small>Latitude</small>
+                                        <div id="cov_north">{{ spatial_coverage.north|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                            {% else %}
+                                {% if spatial_coverage.northlimit %}
+                                    <div class="col-xs-12 col-sm-6 "><small>North Latitude</small>
+                                        <div id="cov_northlimit">{{ spatial_coverage.northlimit|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                                {% if spatial_coverage.eastlimit %}
+                                    <div class="col-xs-12 col-sm-6"><small>East Longitude</small>
+                                        <div id="cov_eastlimit">{{ spatial_coverage.eastlimit|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                                {% if spatial_coverage.southlimit %}
+                                    <div class="col-xs-12 col-sm-6"><small>South Latitude</small>
+                                        <div id="cov_southlimit">{{ spatial_coverage.southlimit|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                                {% if spatial_coverage.westlimit %}
+                                    <div class="col-xs-12 col-sm-6"><small>West Longitude</small>
+                                        <div id="cov_westlimit">{{ spatial_coverage.westlimit|floatformat:"4" }}°</div>
+                                    </div>
+                                {% endif %}
+                            {% endif %}
                         </div>
                     {% endif %}
-                </div>
+                {% endif %}
+                {% if temporal_coverage %}
+                    <br>
+                    <h4>Temporal: </h4>
+                    <table class="info-table">
+                        <tbody>
+                        <tr>
+                            <td><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<strong>Start Date:</strong></td>
+                            <td><span class="format-date"
+                                        data-date="{{ temporal_coverage.start_date }}"></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<strong>End Date:</strong></td>
+                            <td><span class="format-date"
+                                        data-date="{{ temporal_coverage.end_date }}"></span></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                {% endif %}
             </div>
+
+            {% if spatial_coverage %}
+                <div class="col-xs-12 col-sm-8">
+                    <div id="coverageMap" data-mode="view" data-shape-type="{{ spatial_coverage.type }}"></div>
+                </div>
+            {% endif %}
         </div>
     </div>
 {% else %}
     <div class="col-xs-12">
         <div class="row">
-            <div class="col-xs-12 content-block" id="coverage-spatial">
-                <div class="row">
-                    <form action="/hsapi/_internal/{{ cm.short_id }}/coverage/{% if not coverage_spatial_form.initial.north and not coverage_spatial_form.initial.northlimit %}add-metadata/
-                        {% else %}{{ coverage_spatial_form.initial.id }}/update-metadata/{% endif %}"
-                          id="id-coverage-spatial" method="post">
-                        {% csrf_token %}
-                        <div class="col-sm-12">
+            <div class="col-xs-12" id="coverage-spatial">
+                <form action="/hsapi/_internal/{{ cm.short_id }}/coverage/{% if not coverage_spatial_form.initial.north and not coverage_spatial_form.initial.northlimit %}add-metadata/
+                    {% else %}{{ coverage_spatial_form.initial.id }}/update-metadata/{% endif %}"
+                      id="id-coverage-spatial" method="post">
+                    {% csrf_token %}
+                    <div class="row">
+                        <div class="col-sm-12 content-block">
                             <h3>Coverage</h3>
                             <div id="readonly-coverage-notice" class="alert alert-warning alert-dismissible"
                                  style="display: none;">
@@ -250,8 +244,8 @@
                                 </button>
                             </div>
                         </fieldset>
-                    </form>
-                </div>
+                    </div>
+                </form>
             </div>
 
             <div class="col-xs-12"><h4>Temporal:</h4></div>
