--- a/theme/templates/resource-landing-page/references.html
+++ b/theme/templates/resource-landing-page/references.html
@@ -36,7 +36,10 @@
     {% endif %}
 {% else %}
     <div class="col-xs-12 content-block">
-        <h3>Sources</h3>
+        <h3>References</h3>
+    </div>
+    <div class="col-xs-12 content-block">
+        <h4>Sources</h4>
         <table class="table hs-table">
             <tbody>
             {% for source in source_formset.initial %}
@@ -60,16 +63,18 @@
             those
             references here. Click on "Add Source" and then add a full text citation to the original content, a web
             link, or text describing the source of the data.</i></p>
-        <br>
+
         <a id="add-source" class="btn btn-success" data-toggle="modal"
            data-target="#add-source-dialog"><i
                 class="fa fa-plus"></i> Add Source</a>
         <span data-toggle="tooltip" data-placement="auto"
               title='If this resource was derived from another resource, click this button to create a link to the source resource from which this resource was derived. If the source resource is a HydroShare resource, you should paste in the URL to the source resource in HydroShare. If the source resource is something outside of HydroShare, you can paste in a URL or a full text citation to the external resource.'
               class="glyphicon glyphicon-info-sign text-muted"></span>
+
     </div>
     <div class="col-xs-12 content-block">
-        <h3>Relations</h3>
+        <br>
+        <h4>Relations</h4>
         <table class="table hs-table">
             <tbody>
             {% for relation in relation_formset.initial %}
@@ -106,7 +111,6 @@
         <span data-toggle="tooltip" data-placement="auto"
               title='Click this button to add a relationship to another resource, external website, or document. You can express the type of relationship and then enter a URL to the resource or website. If the related resource does not have a URL, you can paste in a full text citation.'
               class="glyphicon glyphicon-info-sign text-muted"></span>
-        <hr style="border: 0;">
     </div>
 {% endif %}
 
