--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -67,8 +67,8 @@
                     <tr class="info-collapsible">
                         <th>Content types:</th>
                         <td>
-                            <span class="label label-default">Time Series</span>&nbsp;
-                            <span class="label label-default">Geographic Feature</span>&nbsp;
+                            <span class="label label-info">Time Series</span>&nbsp;
+                            <span class="label label-info">Geographic Feature</span>&nbsp;
                         </td>
                     </tr>
                 </table>
