--- a/theme/templates/includes/profile-link.html
+++ b/theme/templates/includes/profile-link.html
@@ -18,7 +18,7 @@
         {% if user.userprofile.picture %}
    data-profile-picture="{{ user.userprofile.picture.url }}"
         {% endif %}
-   data-profile-url="/users/{{ user.id }}">
+   data-profile-url="/user/{{ user.id }}">
     {% if user.first_name or user.last_name %}
         {{ user.first_name }} {% if user.middle_name %}
         {{ user.middle_name }}{% endif %} {{ user.last_name }}
