--- a/theme/templates/resource-landing-page/abstract.html
+++ b/theme/templates/resource-landing-page/abstract.html
@@ -17,12 +17,13 @@
                     <div class="controls"><textarea class="form-control input-sm textarea" cols="40"
                                                     id="id_abstract" name="abstract"
                                                     rows="10">{{ cm.metadata.description }}</textarea></div>
-                </div>
-                <div style="margin-top:10px">
-                    <button id="btn-submit-abstract" type="button" class="btn btn-primary pull-right btn-form-submit"
+                    <div style="margin-top:10px">
+                        <button id="btn-submit-abstract" type="button"
+                                class="btn btn-primary pull-right btn-form-submit"
 
-                            style="display: none;">Save changes
-                    </button>
+                                style="display: none;">Save changes
+                        </button>
+                    </div>
                 </div>
             </fieldset>
         </form>
@@ -34,12 +35,13 @@
                 <div id="div_id_abstract" class="control-group">
                     <div class="controls"><textarea class="form-control input-sm textarea" cols="40"
                                                     id="id_abstract" name="abstract" rows="10"></textarea></div>
+                    <div style="margin-top:10px">
+                        <button type="button" class="btn btn-primary pull-right btn-form-submit"
+                                style="display: none;">Save changes
+                        </button>
+                    </div>
                 </div>
-                <div style="margin-top:10px">
-                    <button type="button" class="btn btn-primary pull-right btn-form-submit"
-                            style="display: none;">Save changes
-                    </button>
-                </div>
+
             </fieldset>
         </form>
         {% endif %}
