--- a/theme/templates/resource-landing-page/citation.html
+++ b/theme/templates/resource-landing-page/citation.html
@@ -14,7 +14,7 @@
                 </button>
             </div>
 
-            {% if is_owner_user and not cm.raccess.published %}
+            {% if is_owner_user and not cm.raccess.published and cm.can_be_published %}
             <br />
 
             <div>
