intermediate implementation to allow editting reference url

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1932,6 +1932,31 @@
     </div>
 </div>
 
+<div class="modal fade" id="edit-referenced-url-dialog" tabindex="-1" role="dialog" aria-labelledby="edit-ref-label" aria-hidden="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="edit-referenced-url-title">Edit the referenced URL</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <fieldset class="col-sm-12">
+                        <label>New URL *</label>
+                        <div class="input-group">
+                            <input id="new_url" class="form-control modal-only-required">
+                        </div>
+                    </fieldset>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" id="btn-update-url" class="btn btn-primary" data-dismiss="modal">Save Changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal fade in" id="get-file-url-dialog" tabindex="-1" role="dialog"
      aria-labelledby="rename" aria-hidden="false">
     <div class="modal-dialog">
