--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -156,6 +156,10 @@
                         <span>Open referenced URL</span>
                     </li>
                     {% if page.perms.change and resource_edit_mode and cm.resource_type == "CompositeResource"%}
+                        <li id="btn-edit-referenced-url" data-menu-name="update-ref-url" data-toggle="modal" data-target="#edit-referenced-url-dialog" hidden>
+                            <span class="fa fa-link icon-blue"></span>
+                            <span>Edit referenced URL</span>
+                        </li>
                         <li id="btn-set-generic-file-type" data-menu-name="setgenericfiletype" data-toggle="tooltip" title="Add metadata to an individual file">
                             <span class="glyphicon glyphicon-check icon-blue"></span>
                             <span>Add metadata to file</span>
