get referenced url editing to work

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1942,16 +1942,14 @@
             <div class="modal-body">
                 <div class="row">
                     <fieldset class="col-sm-12">
-                        <label>New URL *</label>
-                        <div class="input-group">
-                            <input id="new_url" class="form-control modal-only-required">
-                        </div>
+                        <label>Reference URL *</label>
+                        <input id="txtNewRefURL" class="form-control modal-only-required">
                     </fieldset>
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" id="btn-update-url" class="btn btn-primary" data-dismiss="modal">Save Changes</button>
+                <button type="button" id="btn-edit-url" class="btn btn-primary" data-dismiss="modal">Save Changes</button>
             </div>
         </div>
     </div>
