--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -45,11 +45,15 @@
             </div>
 
             <div class="col-xs-12">
-                <h2 class="page-title">Create Resource</h2>
-            </div>
-
-            <div class="col-xs-12 height-fix">
-                <span class="btn btn-primary btn-create-resource pull-right">Create Resource</span>
+                <h2 class="page-title">Create Resource
+                    <small class="text-muted">
+                        <i>DOI is reserved for the resource. </i>
+                        <span class="glyphicon glyphicon-info-sign" style="font-size:15px;color:lightblue"
+                              data-toggle="popover1" data-placement="bottom"
+                              data-content="A Digital Object Identifier (DOI) is reserved for the resource.
+                              It remains inactive until the resource is published."></span>
+                    </small>
+                </h2>
             </div>
 
             <div class="col-xs-12">
