--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4651,3 +4651,9 @@ div#resource-content {
 .btn-choose-coordinates {
 	vertical-align: top;
 }
+
+/* popover styling */
+.popover-content {
+  padding: 9px 14px;
+  font-size: 14px;
+}
