--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -47,8 +47,8 @@
             <div class="col-xs-12">
                 <h2 class="page-title">Create Resource
                     <small class="text-muted">
-                        <i>DOI is reserved for the resource. </i>
-                        <span class="glyphicon glyphicon-info-sign" style="font-size:15px;color:lightblue"
+                        <em>DOI is reserved for the resource. </em>
+                        <span class="glyphicon glyphicon-info-sign info-popover-glypn"
                               data-toggle="popover1" data-placement="bottom"
                               data-content="A Digital Object Identifier (DOI) is reserved for the resource.
                               It remains inactive until the resource is published."></span>
