--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -3,76 +3,82 @@
         <div class="flex">
             <div>
                 <div class="dropdown-profile-pic-thumbnail round-image dropdown-user-icon"></div>
-
+                <a href="#" class="btn btn-info btn-block" title="View Profile" data-url>Profile</a>
                 <hr>
 
-                <div>
+                <div id="contributions-wrapper">
                     <small class="text-muted">Contributions</small>
-                    <div data-contributions>122</div>
+                    <div data-contributions></div>
+                    <br>
                 </div>
-                <br>
-                <div>
+
+                <div id="joined-wrapper">
                     <small class="text-muted">Joined</small>
-                    <div data-joined>Nov 24, 2016</div>
+                    <div data-joined></div>
                 </div>
             </div>
             <div style="flex-grow: 1;">
-                <h3 style="margin-top: 0;"><a href="#" title="View Profile" data-name>Maurier Ramirez</a></h3>
+                <h3 style="margin-top: 0;"><a href="#" title="View Profile" data-name></a></h3>
 
                 <table style="margin-left: -14px;">
-                    <tr>
+                    <tr id="email-wrapper">
                         <td class="text-center"><i class="fa fa-envelope text-muted" aria-hidden="true"></i></td>
-                        <td><span data-email>someemail@gmail.com</span></td>
+                        <td><span data-email></span></td>
                     </tr>
-                    <tr>
+                    <tr id="location-wrapper">
                         <td class="text-center"><i class="fa fa-map-marker text-muted" aria-hidden="true"></i></td>
-                        <td><span data-state>Utah</span>, <span data-country>US</span></td>
+                        <td><span data-state></span><span data-country></span></td>
                     </tr>
                 </table>
 
                 <br>
-                <div><span data-organization>Utah Water Research Laboratory</span> | <span
-                        data-title>Web Developer</span></div>
-                <br>
-                <small class="text-muted">Subject Areas:</small>
-                <div data-subjectareas>
-                    <span class="label label-default">Subject 1</span>
-                    <span class="label label-default">Subject 2</span>
-                    <span class="label label-default">Subject 3</span>
+
+                <div id="org-wrapper">
+                    <span data-organization></span><span data-title></span>
                 </div>
 
                 <br>
-                <small class="text-muted">External Profiles:</small>
-                <div class="external-profiles">
-                    <a href="" data-googlescholarid class="identifier-icon" target="_blank"
-                       data-toggle="tooltip"
-                       data-placement="top"
-                       title="Google Scholar">
-                        <i class="ai ai-google-scholar-square hover-shadow"></i>
-                    </a>
-                    <a href="" data-orcid class="identifier-icon" target="_blank" data-toggle="tooltip"
-                       data-placement="top"
-                       title="ORCID">
-                        <i class="ai ai-orcid hover-shadow"></i>
-                    </a>
-                    <a href="" data-researchgateid class="identifier-icon" target="_blank" data-toggle="tooltip"
-                       data-placement="top"
-                       title="ResearchGate">
-                        <i class="ai ai-researchgate-square hover-shadow"></i>
-                    </a>
-                    <a href="" data-researcerid class="identifier-icon" target="_blank" data-toggle="tooltip"
-                       data-placement="top"
-                       title="ResearcherID">
-                        <img class="hover-shadow"
-                             src="{{ STATIC_URL }}img/researcherID.png"
-                             alt="ResearcherID icon"/>
-                    </a>
-                    <a href="" data-identifier-other class="identifier-icon" target="_blank"
-                       data-toggle="tooltip"
-                       data-placement="top"
-                       title="">
-                        <i class="fa fa-address-card hover-shadow"></i>
-                    </a>
+
+                <div id="subjectareas-wrapper">
+                    <small class="text-muted">Subject Areas:</small>
+                    <div data-subjectareas></div>
+                </div>
+
+                <br>
+
+                <div id="externalprofiles-wrapper">
+                    <small class="text-muted">External Profiles:</small>
+                    <div class="external-profiles">
+                        <a href="" data-googlescholarid class="identifier-icon" target="_blank"
+                           data-toggle="tooltip"
+                           data-placement="top"
+                           title="Google Scholar">
+                            <i class="ai ai-google-scholar-square hover-shadow"></i>
+                        </a>
+                        <a href="" data-orcid class="identifier-icon" target="_blank" data-toggle="tooltip"
+                           data-placement="top"
+                           title="ORCID">
+                            <i class="ai ai-orcid hover-shadow"></i>
+                        </a>
+                        <a href="" data-researchgateid class="identifier-icon" target="_blank" data-toggle="tooltip"
+                           data-placement="top"
+                           title="ResearchGate">
+                            <i class="ai ai-researchgate-square hover-shadow"></i>
+                        </a>
+                        <a href="" data-researcerid class="identifier-icon" target="_blank" data-toggle="tooltip"
+                           data-placement="top"
+                           title="ResearcherID">
+                            <img class="hover-shadow"
+                                 src="{{ STATIC_URL }}img/researcherID.png"
+                                 alt="ResearcherID icon"/>
+                        </a>
+                        <a href="" data-identifier-other class="identifier-icon" target="_blank"
+                           data-toggle="tooltip"
+                           data-placement="top"
+                           title="">
+                            <i class="fa fa-address-card hover-shadow"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
