--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -12,7 +12,7 @@
                                 {% if forloop.counter0 != 0 %} <span>·</span> {% endif %}
                                 {% if cr.name %}
                                     {% if cr.description %}
-                                        <a class="profile-preview" data-toggle="modal"
+                                        <a class="author-preview" data-toggle="modal"
                                            data-target="#profile-preview-modal" href="#"
                                            data-name="{{ cr.name }}" data-email="{{ cr.email }}"
                                            data-organization="{{ cr.organization }}"
