--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -6,13 +6,13 @@
                 <a href="#" class="btn btn-info btn-block" title="View Profile" data-url>Profile</a>
                 <hr>
 
-                <div id="contributions-wrapper">
+                <div class="contributions-wrapper">
                     <small class="text-muted">Contributions</small>
                     <div data-contributions></div>
                     <br>
                 </div>
 
-                <div id="joined-wrapper">
+                <div class="joined-wrapper">
                     <small class="text-muted">Joined</small>
                     <div data-joined></div>
                 </div>
@@ -21,11 +21,11 @@
                 <h3 style="margin-top: 0;"><a href="#" title="View Profile" data-name></a></h3>
 
                 <table style="margin-left: -14px;">
-                    <tr id="email-wrapper">
+                    <tr class="email-wrapper">
                         <td class="text-center"><i class="fa fa-envelope text-muted" aria-hidden="true"></i></td>
                         <td><span data-email></span></td>
                     </tr>
-                    <tr id="location-wrapper">
+                    <tr class="location-wrapper">
                         <td class="text-center"><i class="fa fa-map-marker text-muted" aria-hidden="true"></i></td>
                         <td><span data-state></span><span data-country></span></td>
                     </tr>
@@ -33,20 +33,20 @@
 
                 <br>
 
-                <div id="org-wrapper">
+                <div class="org-wrapper">
                     <span data-organization></span><span data-title></span>
                 </div>
 
                 <br>
 
-                <div id="subjectareas-wrapper">
+                <div class="subjectareas-wrapper">
                     <small class="text-muted">Subject Areas:</small>
                     <div data-subjectareas></div>
                 </div>
 
                 <br>
 
-                <div id="externalprofiles-wrapper">
+                <div class="externalprofiles-wrapper">
                     <small class="text-muted">External Profiles:</small>
                     <div class="external-profiles">
                         <a href="" data-googlescholarid class="identifier-icon" target="_blank"
