--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -2034,10 +2034,41 @@
 <div class="modal fade" id="profile-preview-modal" tabindex="-1" role="dialog" aria-labelledby="profileName"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="profile-badge-container">
-            <div class="profile-badge-header">
-                <div class="profile-pic round-image user-icon"></div>
-                <div class="external-profiles">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Author</h4>
+            </div>
+            <div class="modal-body">
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <th>Name: </th>
+                            <td>Lorem Ipsum.</td>
+                        </tr>
+                        <tr>
+                            <th>Organization:</th>
+                            <td>Lorem ipsum dolor.</td>
+                        </tr>
+                        <tr>
+                            <th>Email:</th>
+                            <td>Lorem@lorem.com</td>
+                        </tr>
+                        <tr>
+                            <th>Address:</th>
+                            <td>Lorem ipsum dolor sit.</td>
+                        </tr>
+                        <tr>
+                            <th>Phone:</th>
+                            <td>+1 (435) 363-5910</td>
+                        </tr>
+                        <tr>
+                            <th>Homepage:</th>
+                            <td>somehomepage.com</td>
+                        </tr>
+                        <tr>
+                            <th>Author Identifiers:</th>
+                            <td>
+                                <div class="external-profiles">
                     <a href="" data-googlescholarid class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
                        title="Google Scholar">
                         <i class="ai ai-google-scholar-square hover-shadow"></i>
@@ -2061,48 +2092,13 @@
                         <i class="fa fa-address-card hover-shadow"></i>
                     </a>
                 </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <div class="profile-badge-content">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h2 data-name></h2>
-                    </div>
-                    <div class="col-xs-6">
-                        <table class="info-table">
-                            <tr>
-                                <td class="text-center"><i class="fa fa-envelope icon-blue" aria-hidden="true"></i></td>
-                                <td><span data-email></span></td>
-                            </tr>
-                            <tr>
-                                <td class="text-center"><i class="fa fa-map-marker icon-blue" aria-hidden="true"></i></td>
-                                <td><span data-state></span>, <span data-country></span></td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="col-xs-6">
-                        <div class="profile-badge-stat">
-                            <span data-contributions></span><span>Contributions</span>
-                        </div>
-
-                        <div class="profile-badge-stat">
-                            <span>Joined</span><span data-joined></span>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <br>
-                    <h4><span data-organization></span> | <span
-                            data-title></span>
-                    </h4>
-                    <div class="text-muted">Subject Areas:</div>
-                    <div data-subjectareas></div>
-                </div>
-
-                <hr>
-                <div class="text-right">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <a id="btn-preview-profile" href="#" class="btn btn-primary">View Profile</a>
-                </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
