--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2845,6 +2845,11 @@ span.you-flag {
     padding-right: 25px
 }
 
+#btn-add-new-author {
+    height: 25px;
+    margin-left: 10px;
+}
+
 #resource-search-input, #id_q {
     padding-left: 25px;
     padding-right: 30px
@@ -4719,6 +4724,10 @@ div#resource-content {
     -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
     -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12)
+}
+
+a[data-toggle="modal"] {
+    cursor: pointer;
 }
 
 #profile-preview-modal .profile-pic {
