--- a/theme/templates/resource-landing-page/credits.html
+++ b/theme/templates/resource-landing-page/credits.html
@@ -87,12 +87,9 @@
         <h3>Credits</h3>
     </div>
     <div class="col-sm-12 content-block">
-        {% if fundingagnency_formset.initial %}
-            <h4>Funding Agencies</h4>
-            <h5>This resource was created using funding from the following sources:</h5>
-        {% endif %}
-
-        {% if fundingagnency_formset.initial|length > 0%}
+        <h4>Funding Agencies</h4>
+        <p><i>This resource was created using funding from the following sources:</i></p>
+        {% if fundingagnency_formset.initial|length > 0 %}
             <table class="table hs-table table-striped funding-agencies-table">
                 <tbody>
                 <tr class="header-row">
@@ -106,7 +103,8 @@
                     <tr data-index="{{ forloop.counter0 }}">
                         <td>
                             {% if agency.agency_url %}
-                                <strong><a href="{{ agency.agency_url }}" target="_blank">{{ agency.agency_name }}</a></strong>
+                                <strong><a href="{{ agency.agency_url }}"
+                                           target="_blank">{{ agency.agency_name }}</a></strong>
                             {% else %}
                                 <strong><span>{{ agency.agency_name }}</span></strong>
                             {% endif %}
@@ -115,16 +113,18 @@
                         <td>{{ agency.award_number }}</td>
                         <td>
                             <span data-toggle="modal" data-placement="auto" title="Edit"
-                               class="glyphicon glyphicon-pencil icon-button icon-blue table-icon"
-                               data-target="#edit-funding-agency-{{ agency.id }}"></span>
+                                  class="glyphicon glyphicon-pencil icon-button icon-blue table-icon"
+                                  data-target="#edit-funding-agency-{{ agency.id }}"></span>
                             <span data-toggle="modal" data-placement="auto" title="Remove"
-                               class="glyphicon glyphicon-trash icon-button btn-remove table-icon"
-                               data-target="#delete-funding-agency-{{ agency.id }}"></span>
+                                  class="glyphicon glyphicon-trash icon-button btn-remove table-icon"
+                                  data-target="#delete-funding-agency-{{ agency.id }}"></span>
                         </td>
                     </tr>
                 {% endfor %}
                 </tbody>
             </table>
+        {% else %}
+            <p>No funding agencies have been added.</p>
         {% endif %}
 
         <a id="btn-add-funding-agency" type="button" class="btn btn-success row-selector" data-toggle="modal"
@@ -135,61 +135,62 @@
 
     <div class="col-xs-12 content-block">
         <h4>Contributors</h4>
-        <div>
-            <span class="">People or
-                organizations that contributed technically, materially,
-                financially, or provided general support for the
-                creation of the resource's content but are not
-                considered authors.
-            </span>
-        </div>
-        <br>
+        <p><i>People or
+            organizations that contributed technically, materially,
+            financially, or provided general support for the
+            creation of the resource's content but are not
+            considered authors.
+        </i></p>
 
-        <table class="hs-table contact-table table">
-            <thead>
-            <tr class="header-row">
-                <th>Name</th>
-                <th>Organization</th>
-                <th>Address</th>
-                <th>Phone</th>
-                <th>Author Identifiers</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for contributor in contributor_formset.initial %}
-                <tr>
-                    <td>{% if contributor.description %}
-                        <a href="{{ contributor.description }}">{{ contributor.name }}</a>{% else %}
-                        {{ contributor.name }}{% endif %}</td>
-                    <td>{% if  contributor.organization %}
-                        {{ contributor.organization }}{% endif %}</td>
-                    <td>{% if  contributor.address %}
-                        {{ contributor.address }}{% endif %}</td>
-                    <td>{% if  contributor.phone %}
-                        {{ contributor.phone }}{% endif %}</td>
-                   <td>
-                        {% for name, link in contributor.identifiers.items %}
-                            {{ identif.name }}
-                            <a href="{{ link }}"
-                               target="_blank">{{ name }}</a>
-                            {% if not forloop.last %}, {% endif %}
-                        {% endfor %}
-                    </td>
-                    <td>
-                        <span data-toggle="modal" data-placement="auto" title="Edit"
-                           class="glyphicon glyphicon-pencil table-icon icon-button icon-blue"
-                           data-target="#edit-contributor-dialog{{ contributor.id }}">
-                        </span>
-                        <span data-toggle="modal" data-placement="auto" title="Remove"
-                           class="glyphicon glyphicon-trash table-icon icon-button btn-remove"
-                           data-target="#delete-contributor-dialog{{ contributor.id }}">
-                        </span>
-                    </td>
+        {% if contributor_formset.initial|length > 0 %}
+            <table class="hs-table contact-table table">
+                <thead>
+                <tr class="header-row">
+                    <th>Name</th>
+                    <th>Organization</th>
+                    <th>Address</th>
+                    <th>Phone</th>
+                    <th>Author Identifiers</th>
+                    <th></th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for contributor in contributor_formset.initial %}
+                    <tr>
+                        <td>{% if contributor.description %}
+                            <a href="{{ contributor.description }}">{{ contributor.name }}</a>{% else %}
+                            {{ contributor.name }}{% endif %}</td>
+                        <td>{% if  contributor.organization %}
+                            {{ contributor.organization }}{% endif %}</td>
+                        <td>{% if  contributor.address %}
+                            {{ contributor.address }}{% endif %}</td>
+                        <td>{% if  contributor.phone %}
+                            {{ contributor.phone }}{% endif %}</td>
+                       <td>
+                            {% for name, link in contributor.identifiers.items %}
+                                {{ identif.name }}
+                                <a href="{{ link }}"
+                                   target="_blank">{{ name }}</a>
+                                {% if not forloop.last %}, {% endif %}
+                            {% endfor %}
+                        </td>
+                        <td>
+                            <span data-toggle="modal" data-placement="auto" title="Edit"
+                               class="glyphicon glyphicon-pencil table-icon icon-button icon-blue"
+                               data-target="#edit-contributor-dialog{{ contributor.id }}">
+                            </span>
+                            <span data-toggle="modal" data-placement="auto" title="Remove"
+                               class="glyphicon glyphicon-trash table-icon icon-button btn-remove"
+                               data-target="#delete-contributor-dialog{{ contributor.id }}">
+                            </span>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>No contributors have been added.</p>
+        {% endif %}
 
         <a type="button" class="btn btn-success" data-toggle="modal"
            data-target="#add-contributor-dialog" multiple="multiple">
