--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -255,17 +255,43 @@
      aria-labelledby="edit-creator" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form id="id_creator_{{ author.id }}" action="/hsapi/_internal/{{ cm.short_id }}/creator/{{ author.id }}/update-metadata/"
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-hidden="true">×
+                </button>
+                <h4 class="modal-title" id="edit-creator"> Edit Author</h4>
+            </div>
+
+            {% if creator_formset.initial|length > 1 %}
+                <div class="modal-body">
+                    <span title="Remove"
+                       data-toggle="collapse" data-target="#confirm-delete-author{{ author.id }}"
+                       class="glyphicon glyphicon-trash icon-button table-icon btn-remove"></span>
+
+                    <div id="confirm-delete-author{{ author.id }}" class="collapse row" style="margin-top: 35px;">
+                        <div class="col-xs-6">
+                            <strong>Are you sure you want to delete this metadata element?</strong>
+                        </div>
+                        <div class="col-xs-6">
+                            <button type="button" class="btn btn-default" data-toggle="collapse"
+                                    style="margin-right: 10px;"
+                                    data-target="#confirm-delete-author{{ author.id }}">Cancel
+                            </button>
+                            <a type="button" class="btn btn-danger"
+                               href="/hsapi/_internal/{{ cm.short_id }}/creator/{{ author.id }}/delete-metadata/">
+                                Delete
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+
+            <form id="id_creator_{{ author.id }}"
+                  action="/hsapi/_internal/{{ cm.short_id }}/creator/{{ author.id }}/update-metadata/"
                   method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <input name="resource-mode" type="hidden" value="edit">
 
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"
-                            aria-hidden="true">×
-                    </button>
-                    <h4 class="modal-title" id="edit-creator"> Edit Author</h4>
-                </div>
                 <div class="modal-body">
                     <div class="form-group">
                         <fieldset>
@@ -377,24 +403,6 @@
                     <button type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="delete-creator-dialog{{ author.id }}" tabindex="-1" role="dialog"
-     aria-labelledby="delete-creator" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="delete-creator">Delete metadata element</h4></div>
-            <div class="modal-body"><strong>Are you sure you want to delete this metadata element?</strong>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <a type="button" class="btn btn-danger"
-                   href="/hsapi/_internal/{{ cm.short_id }}/creator/{{ author.id }}/delete-metadata/">Delete</a>
-            </div>
         </div>
     </div>
 </div>
@@ -2031,7 +2039,7 @@
 </div>
 
 <!-- Profile Preview Modal -->
-<div class="modal fade" id="profile-preview-modal" tabindex="-1" role="dialog" aria-labelledby="profileName"
+<div class="modal fade" id="view-author-modal" tabindex="-1" role="dialog" aria-labelledby="profileName"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
